--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     region: singapore
     plan: free
-    buildCommand: npm ci && npx prisma generate
+    buildCommand: npm ci && npx prisma migrate deploy && npx prisma generate
     startCommand: npm start
     envVars:
       - key: NODE_ENV
