--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "LCT Locket Web App - Enterprise-grade Node.js REST API with Mail Integration",
   "main": "server.js",
   "scripts": {
+    "build": "npm run prisma:generate && npm run prisma:migrate:prod",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --coverage",
