--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "LCT Locket Web App - Enterprise-grade Node.js REST API with Mail Integration",
   "main": "server.js",
   "scripts": {
-    "build": "npm run prisma:generate && npm run prisma:migrate:prod",
+    "build": "npm run migrate:force-columns",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --coverage",
@@ -17,6 +17,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:prod": "prisma migrate deploy",
     "migrate:force": "node scripts/migrate-production.js",
+    "migrate:force-columns": "node scripts/force-migration.js",
     "prisma:studio": "prisma studio",
     "seed": "node prisma/seeds/seed.js",
     "seed:prod": "node prisma/seeds/production-seed.js",
