Add script to reset failed migrations and fix database schema

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "migrate:force": "node scripts/migrate-production.js",
     "migrate:force-columns": "node scripts/force-migration.js",
     "check:db": "node scripts/check-db-structure.js",
+    "migrate:reset": "node scripts/reset-and-migrate.js",
     "prisma:studio": "prisma studio",
     "seed": "node prisma/seeds/seed.js",
     "seed:prod": "node prisma/seeds/production-seed.js",
