--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "postinstall": "prisma generate",
-    "build": "prisma generate && node scripts/simple-migration.js",
+    "build": "prisma generate && node scripts/simple-migration.js && node scripts/add-settings-columns.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --coverage",
